fix last item not showing on mobile for awardlisting using in tab

--- a/styles/lazy-styles.css
+++ b/styles/lazy-styles.css
@@ -6,7 +6,6 @@
     flex-direction: column;
     width: 100%;
     margin: 0 auto;
-    overflow: hidden;
 }
 
 .tabs-container .about-us-stats {
